# perception

./: README.md  WorkSummary_2026_02_12.md  agent_team_tips.md  component_container_comparison.md  qos_override.yaml
.claude/agents/: lidar-optimizer.md
install/lidar_clustering/include/lidar_clustering/: clustering_component.hpp  dbscan.hpp  dbscan_gpu.hpp  dbscan_gpu_kernels.h  nanoflann.hpp
install/lidar_clustering/share/ament_index/resource_index/package_run_dependencies/: lidar_clustering
install/lidar_clustering/share/ament_index/resource_index/parent_prefix_path/: lidar_clustering
install/lidar_clustering/share/ament_index/resource_index/rclcpp_components/: lidar_clustering
install/lidar_clustering/share/lidar_clustering/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_clustering/share/lidar_clustering/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  lidar_clusteringConfig-version.cmake  lidar_clusteringConfig.cmake
install/lidar_clustering/share/lidar_clustering/config/: clustering_params.yaml
install/lidar_clustering/share/lidar_clustering/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/lidar_launch/share/ament_index/resource_index/package_run_dependencies/: lidar_launch
install/lidar_launch/share/ament_index/resource_index/parent_prefix_path/: lidar_launch
install/lidar_launch/share/lidar_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/lidar_launch/share/lidar_launch/cmake/: lidar_launchConfig-version.cmake  lidar_launchConfig.cmake
install/lidar_launch/share/lidar_launch/environment/: ament_prefix_path.dsv  path.dsv
install/lidar_launch/share/lidar_launch/launch/: .my_velodyne_VLP16-composed-launch.py.swp  my_velodyne_VLP16-composed-launch.py
install/lidar_voxel_grid/include/lidar_voxel_grid/: voxel_grid_component.hpp
install/lidar_voxel_grid/lib/lidar_voxel_grid/: voxel_grid_node
install/lidar_voxel_grid/share/ament_index/resource_index/package_run_dependencies/: lidar_voxel_grid
install/lidar_voxel_grid/share/ament_index/resource_index/parent_prefix_path/: lidar_voxel_grid
install/lidar_voxel_grid/share/ament_index/resource_index/rclcpp_components/: lidar_voxel_grid
install/lidar_voxel_grid/share/lidar_voxel_grid/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_voxel_grid/share/lidar_voxel_grid/cmake/: lidar_voxel_gridConfig-version.cmake  lidar_voxel_gridConfig.cmake
install/lidar_voxel_grid/share/lidar_voxel_grid/config/: voxel_grid_params.yaml
install/lidar_voxel_grid/share/lidar_voxel_grid/environment/: ament_prefix_path.dsv  path.dsv
install/patchworkpp/lib/patchworkpp/: patchworkpp_node
install/patchworkpp/share/ament_index/resource_index/package_run_dependencies/: patchworkpp
install/patchworkpp/share/ament_index/resource_index/rclcpp_components/: patchworkpp
install/patchworkpp/share/patchworkpp/: local_setup.sh  package.sh
install/patchworkpp/share/patchworkpp/config/: patchworkpp_params.yaml
install/velodyne_cropbox/share/velodyne_cropbox/: local_setup.dsv  local_setup.sh  package.xml
install/velodyne_cropbox/share/velodyne_cropbox/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  velodyne_cropboxConfig.cmake
install/velodyne_cropbox/share/velodyne_cropbox/config/: default_cropbox_params.yaml
install/velodyne_ground_segmentation/include/velodyne_ground_segmentation/: ground_segmentation_component.hpp
install/velodyne_ground_segmentation/share/velodyne_ground_segmentation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/velodyne_ground_segmentation/share/velodyne_ground_segmentation/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  velodyne_ground_segmentationConfig.cmake
install/velodyne_ground_segmentation/share/velodyne_ground_segmentation/config/: default_ground_segmentation_params.yaml
log/: latest_build
src/lidar/lidar_clustering/: CMakeLists.txt  DBSCAN_THEORY.md  PIPELINE.md  package.xml
src/lidar/lidar_clustering/config/: clustering_params.yaml
src/lidar/lidar_clustering/include/lidar_clustering/: clustering_component.hpp  dbscan.hpp  dbscan_gpu.hpp  dbscan_gpu_kernels.h
src/lidar/lidar_clustering/src/: clustering_component.cpp  dbscan.cpp  dbscan_gpu.cpp  dbscan_gpu.cu
src/lidar/lidar_voxel_grid/: CMakeLists.txt
src/lidar/lidar_voxel_grid/config/: voxel_grid_params.yaml
src/lidar/lidar_voxel_grid/include/lidar_voxel_grid/: voxel_grid_component.hpp
src/lidar/lidar_voxel_grid/src/: voxel_grid_component.cpp
src/lidar/patchwork-plusplus/ros/: CMakeLists.txt
src/lidar/patchwork-plusplus/ros/launch/: patchworkpp.launch.py
src/lidar/patchwork-plusplus/ros/src/: GroundSegmentationServer.cpp  GroundSegmentationServer.hpp
src/lidar/velodyne_cropbox/: CMakeLists.txt
src/lidar/velodyne_cropbox/config/: default_cropbox_params.yaml
src/lidar/velodyne_cropbox/include/velodyne_cropbox/: cropbox_component.hpp
src/lidar/velodyne_pointcloud/config/: VLP16-velodyne_transform_node-params.yaml
src/lidar/velodyne_pointcloud/include/velodyne_pointcloud/: datacontainerbase.hpp
src/lidar_launch/: CMakeLists.txt  package.xml
src/lidar_launch/launch/: my_velodyne_VLP16-composed-launch.py
velodyne/velodyne_cropbox/: CMakeLists.txt
velodyne/velodyne_cropbox/launch/: velodyne_with_cropbox-VLP16-launch.py
velodyne/velodyne_cropbox/src/: cropbox_component.cpp
velodyne/velodyne_ground_segmentation/: CMakeLists.txt  package.xml
velodyne/velodyne_ground_segmentation/src/: ground_segmentation_component.cpp
(+4 files in other folders)
