<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_launch</name>
  <version>0.0.0</version>
  <description>LiDAR processing pipeline launch files</description>
  <maintainer email="jjss4824@gmail.com">aiv</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>velodyne_cropbox</exec_depend>
  <exec_depend>patchworkpp</exec_depend>
  <exec_depend>lidar_clustering</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
